improve subset implementation